# SISO

./: .gitignore  .pdm-python  .travis.yml  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  simra.vts  test.off  test.py  vtfwriter.pyx
.github/workflows/: python-package.yml
cico/: __main__.py  geometry.py
cico/reader/: ifem.py  simra.py
cico/writer/: nc.py  vtf.py  writer.py
ifem_to_vt/: __init__.py  __main__.py  fields.py  geometry.py  pipeline.py  reader.py  typing.py  util.py
ifem_to_vt/reader/: __init__.py  g2.py  hdf5.py  ifem.py  lr.py  puregeometry.py  reader.py  res.py  simra.py  wrf.py
ifem_to_vt/writer/: __init__.py  pvd.py  vtf.py  vtk.py  vtu.py  writer.py
siso/: __init__.py  __main__.py  api.py  coord.py  coords.py  field.py  fields.py  filters.py  geometry.py  impl.py  instrument.py  multisource.py  pipeline.py  timestep.py  topology.py  typing.py  util.py  zone.py
siso-old/: __main__.py  geometry.py
siso-old/reader/: multi.py  puregeometry.py  reader.py
siso-old/writer/: __init__.py  nc.py  vtk.py
siso/coords/: __init__.py  util.py
siso/filter/: __init__.py  basis_filter.py  basismerge.py  coordtransform.py  decompose.py  discretize.py  eigendisp.py  field_filter.py  force_unstructured.py  keyzones.py  passthrough.py  recombine.py  strict.py  tesselate.py  timeslice.py  zonemerge.py
siso/filters/: __init__.py  coordtransform.py  decompose.py  eigendisp.py  force_unstructured.py  keyzones.py  lasttime.py  passthrough.py  recombine.py  strict.py  tesselate.py  timeslice.py  zonemerge.py
siso/reader/: __init__.py  excel.py  geotiff.py  gotools.py  ifem.py  lrspline.py  opera.py  puregeometry.py  reader.py  simra.py  simranc.py  wrf.py
siso/util/: __init__.py  bisect.py  cell_numbering.py  coord.py  coords.py  field_data.py
siso/writer/: __init__.py  api.py  g2.py  nc.py  simra.py  vtf.py  vtk.py  writer.py
stubs/: erfa.pyi  f90nml.pyi  h5py.pyi  lrspline.pyi  netCDF4.pyi  vtfwriter.pyi
stubs/scipy/io/: __init__.pyi
stubs/scipy/spatial/: transform.pyi
stubs/splipy/: __init__.pyi  io.pyi  utils.pyi
tests/: integrity_test.py  shared.py  test_pvd.py  test_simra.py  test_unit.py  test_vtf.py  test_vtk.py  test_vts.py  test_vtu.py
tests/testdata/: Annulus-1.vtk  Annulus-2.vtk  Annulus-2.vtu  Annulus-3.vtk  Annulus-3.vtu  Annulus.vtf  Cavity-mixed-1.vtk  Cavity-mixed.vtf  Cavity3D-compatible-1.vtk  Cavity3D-compatible-1.vtu  Cavity3D-compatible.vtf  Cyl2D-VMSFSI-weak-1.vtk  Cyl2D-VMSFSI-weak-1.vtu  Cyl2D-VMSFSI-weak-10.vtk  Cyl2D-VMSFSI-weak-10.vtu  Cyl2D-VMSFSI-weak-11.vtk  Cyl2D-VMSFSI-weak-11.vtu  Cyl2D-VMSFSI-weak-2.vtk  Cyl2D-VMSFSI-weak-2.vtu  Cyl2D-VMSFSI-weak-3.vtk  Cyl2D-VMSFSI-weak-3.vtu  Cyl2D-VMSFSI-weak-4.vtk  Cyl2D-VMSFSI-weak-5.vtk  Cyl2D-VMSFSI-weak-5.vtu  Cyl2D-VMSFSI-weak-6.vtk  Cyl2D-VMSFSI-weak-6.vtu  Cyl2D-VMSFSI-weak-7.vtk  Cyl2D-VMSFSI-weak-8.vtk  Cyl2D-VMSFSI-weak-9.vtk  Cyl2D-VMSFSI-weak.vtf  Square-1.vtk  Square-1.vtu  Square-LR-1.vtk  Square-LR.vtf  Square-ad-1.vtk  Square-ad-1.vtu  Square-ad-10.vtk  Square-ad-10.vtu  Square-ad-11.vtk  Square-ad-2.vtk  (+60 more)
tests/testdata/g2/: Backstep2D.g2  simra.g2
tests/testdata/geogrid/: geo_em.d01.nc
tests/testdata/hdf5/: Annulus.hdf5  Cavity-mixed.hdf5  Cavity3D-compatible.hdf5  Cyl2D-VMSFSI-weak.hdf5  ElasticFlap.hdf5  NACA0015_a6_small_weak_mixed_SA.hdf5  ScordelisPoint-NURBS.hdf5  SmallBox.hdf5  Square-LR.hdf5  Square-ad-starttime.pvd  Square-compatible-abd1-B-I-stat.hdf5  Square-modes.hdf5  TestCell1D.hdf5  Waterfall3D.hdf5
tests/testdata/nastran/: FEM_Fine.nas  Fine-dyn.hdf5  Q4-dyn.hdf5  Q4.hdf5  T3.hdf5
tests/testdata/pvd/: Annulus-with-basis.pvd  Annulus-with-nvis.pvd  Annulus.pvd  Backstep2D.pvd  Cavity-mixed.pvd  Cavity3D-compatible.pvd  Cyl2D-VMSFSI-weak.pvd  NACA0015_a6_small_weak_mixed_SA.pvd  ScordelisPoint-NURBS.pvd  SmallBox-with-last.pvd  SmallBox.pvd  Square-LR.pvd  Square-ad-endtime.pvd  Square-ad-intime.pvd  Square-ad-starttime.pvd  Square-ad-steptime.pvd  Square-ad.pvd  Square-compatible-abd1-B-I-stat.pvd  Square-mixed-abd1-B-I-stat.pvd  Square-modes-freq.pvd  Square-modes.pvd  Square.pvd  TestCell1D.pvd  Waterfall3D.pvd  annulus3D-with-nvis.pvd  annulus3D.pvd  backstep-3.pvd  boun.pvd  box.pvd  cube-3.pvd  geo_em.d01.pvd  hist.pvd  map.pvd  mesh.pvd  mesh2d.pvd  singular-pressure-corner-rec.pvd  square-2.pvd  wrfout_d01-eastward-extrude-global.pvd  wrfout_d01-eastward-extrude-periodic.pvd  wrfout_d01-eastward-extrude.pvd  (+26 more)
tests/testdata/vtf/: Annulus-with-nvis.vtf  Annulus.vtf  Backstep2D.vtf  Cavity-mixed.vtf  Cavity3D-compatible.vtf  Cyl2D-VMSFSI-weak.vtf  NACA0015_a6_small_weak_mixed_SA.vtf  SmallBox-with-last.vtf  SmallBox.vtf  Square-LR.vtf  Square-ad.vtf  Square-compatible-abd1-B-I-stat.vtf  Square-mixed-abd1-B-I-stat.vtf  Square-modes-freq.vtf  Square-modes-ref.vtf  Square-modes.vtf  Square.vtf  Waterfall3D.vtf  annulus3D-with-nvis.vtf  annulus3D.vtf  backstep-3.vtf  box.vtf  cube-3.vtf  map.vtf  mesh.vtf  mesh2d.vtf  singular-pressure-corner-rec.vtf  square-2.vtf
tests/testdata/vtk/: Annulus-with-nvis-1.vtk  Annulus-with-nvis-2.vtk  Annulus-with-nvis-3.vtk  Backstep2D.vtk  Cyl2D-VMSFSI-weak-9.vtk  NACA0015_a6_small_weak_mixed_SA-1.vtk  NACA0015_a6_small_weak_mixed_SA-2.vtk  NACA0015_a6_small_weak_mixed_SA-3.vtk  NACA0015_a6_small_weak_mixed_SA-4.vtk  SmallBox-1.vtk  SmallBox-2.vtk  SmallBox-with-last.vtk  Square-ad-1.vtk  Square-ad-10.vtk  Square-ad-11.vtk  Square-ad-2.vtk  Square-ad-4.vtk  Square-ad-6.vtk  Square-ad-7.vtk  Square-compatible-abd1-B-I-stat-1.vtk  Square-mixed-abd1-B-I-stat-1.vtk  Square-modes-freq-3.vtk  Square-modes-freq-6.vtk  Square-modes-freq-7.vtk  TestCell1D-1.vtk  Waterfall3D-1.vtk  annulus3D-with-nvis.vtk  annulus3D.vtk  backstep-3.vtk  box.vtk  cube-3.vtk  geo_em.d01.vtk  hist-1.vtk  map.vtk  mesh.vtk  mesh2d.vtk  square-2.vtk
tests/testdata/vts/: Annulus-1.vts  Annulus-2.vts  Annulus-3.vts  Cavity-mixed-1.vts  Cavity3D-compatible-1.vts  Square-1.vts  Square-ad-1.vts  Square-ad-10.vts  Square-ad-11.vts  Square-ad-2.vts  Square-ad-3.vts  Square-ad-4.vts  (+75 more)
(+317 files in other folders)
