[tool.poetry]
name = "siso"
version = "4.0.0"
description = ""
authors = ["Eivind Fonn <evfonn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
LRSplines = "^1.10.0"
Splipy = "^1.6.0"
rich = "^13.3.1"
f90nml = "^1.4.3"
h5py = "^3.8.0"
numpy = "^1.24.2"
vtk = "^9.2.5"
netCDF4 = "^1.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
typing-protocol-intersection = "^0.2.3"
poethepoet = "^0.18.1"
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
siso = "siso.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "VTK", "FIRSTPARTY", "LOCALFOLDER"]
known_vtk = ["vtkmodules", "vtk"]
line_length = 110
lines_after_imports = 2

[tool.poe.tasks]
test = "pytest tests/test_vtk.py tests/test_vtu.py tests/test_vts.py"
mypy = "mypy siso"
check = ["mypy", "test"]
black = "black siso"
isort = "isort siso"
fmt = ["black", "isort"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = "f90nml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "h5py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="lrspline.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="netCDF4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "splipy.*"
ignore_missing_imports = true
