[project]
authors = [
    {name = "Eivind Fonn", email = "eivind.fonn@sintef.no"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "click<9.0.0,>=8.1.3",
    "LRSplines<2.0.0,>=1.11.0",
    "Splipy<2.0.0,>=1.7.0",
    "rich<14.0.0,>=13.3.1",
    "f90nml<2.0.0,>=1.4.3",
    "h5py<4.0.0,>=3.8.0",
    "numpy<2.0.0,>=1.24.2",
    "vtk<10.0.0,>=9.2.5",
    "netCDF4<2.0.0,>=1.6.2",
    "pyerfa<3.0.0.0,>=2.0.0.1",
    "attrs<23.0.0,>=22.2.0",
    "click-option-group<1.0.0,>=0.5.5",
    "jax<1.0.0,>=0.4.6",
    "jaxlib<1.0.0,>=0.4.6",
]
name = "siso"
version = "4.1.0"
description = ""
readme = "README.rst"

[project.scripts]
siso = "siso.__main__:main"

[project.optional-dependencies]
vtf = ["vtfwriter"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 110
include = ["siso/**/*.py", "tests/**/*.py", "stubs/**/*.pyi"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = [
    "E741",     # Ambiguous variable name
    "UP007",    # Only if your project targets Python 3.9 or earlier
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "ISC001",   # Conflicts with rust formatting
    "TD003",    # Issue links for each todo comment
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
files = ["siso/**/*.py"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

# Add path to stubs directory if you need to write stubs
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
module = "siso.util.bisect"
ignore_errors = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.2.1",
    "mypy<2.0.0,>=1.0.0",
    "typing-protocol-intersection<1.0.0,>=0.2.3",
    "ruff<1.0.0,>=0.0.257",
    "bump-my-version>=0.17.4",
    "vtfwriter-stubs>=1.1.0",
]

[tool.pdm.build]
includes = []

[tool.bumpversion]
current_version = "4.1.0"
allow_dirty = false
commit = true
tag = true
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        (?P<pre_label>a|b|rc|stable)
        (?P<pre_number>[0-9]+)?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}{pre_label}{pre_number}",
    "{major}.{minor}.{patch}",
]
message = "Bump version: {current_version} -> {new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
sign_tags = true

[tool.bumpversion.parts.pre_label]
optional_value = "stable"
values = [
    "a",
    "b",
    "rc",
    "stable",
]

[tool.bumpversion.parts.pre_number]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
